# ai-example

./: .gitignore  README.md  pyproject.toml
ai_example/: (1)第一个实例.ipynb  hello_world.ipynb  prepare.ipynb  线性代数.ipynb
data/: p.t
python_helper/: CNN-RNN-GAN.ipynb  CNN和RNN.ipynb  jupyter.ipynb  jupyter_notebook_快捷键.ipynb  matplotlib.ipynb  tmp.ipynb  保存为csv.ipynb  参数中的星号的作用.ipynb
pytorch_base/: tensor_compare.ipynb  tensor_concat.ipynb  tensor_function.ipynb  tensor_op.ipynb  tensor_select_index.ipynb  tensor_slice.ipynb  张量.ipynb  温度计.ipynb
pytorch_project/: hello.ipynb  tensor.ipynb  tensor_clamp.ipynb  tensor_concat.ipynb  tensor_function.ipynb  tensor_norm.ipynb  torchvision训练图像分类模型.ipynb  二维图像.ipynb  卷积基础.ipynb  求导-线性回归模型.ipynb  神经网络分类任务.ipynb  线性回归-气温预测.ipynb
tests/: file_test.py  image_test.py  元组取值示例_test.py
transformer/: BERT.ipynb  first.ipynb
utils/: file.py  image.py  string.py
