[tool.poetry]
name = "ai-example"
version = "0.1.0"
description = ""
authors = ["hjs <hjs9987@outlook.com>"]
readme = "README.md"

packages = [
    { include = "ai_example" },
    { include = "utils" },
    { include = "pytorch_project" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.26.4,<2.0.0"
opencv-python = "^4.10.0.84"
torchvision = { version = "^0.19.1", source = "torch" }
torchaudio = { version = "^2.4.1", source = "torch" }
h5py = "^3.11.0"
imageio = "^2.35.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
torch = {version = "^2.4.1+cu118", source = "torch"}
onnx = "^1.16.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[[tool.poetry.source]]
name = "tencent"
priority = "primary"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
